[package]
name = "pyo3-polars"
version = "0.2.0"
edition = "2021"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/pola-rs/pyo3-polars"
description = "PyO3 bindings to polars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { git = "https://github.com/pola-rs/polars", rev = "7943c5de9ca1097c2848855ca831806be31649e8", default_features = false }
polars-core = { git = "https://github.com/pola-rs/polars", rev = "7943c5de9ca1097c2848855ca831806be31649e8", default_features = false }
pyo3 = "0.18.1"
thiserror = "1"
arrow2 = { git = "https://github.com/ritchie46/arrow2", branch = "polars_2023-03-01" }
